# MicrosoftDocsLearn

./: .gitigonre  README.md
cpp/: CMakeLists.txt  abort_exit_compare.cpp  alignment.cpp  arguments_definitions.cpp  atexit_function.cpp  lvalue_and_rvalue.cpp  shared_ptr_learn.cpp  translation_units_and_linkage.cpp  translation_units_and_linkage_test.cpp
