cmake_minimum_required(VERSION 3.17)
project(docs_microsoft)

set(CMAKE_CXX_STANDARD 14)

add_executable(shared_ptr_learn shared_ptr_learn.cpp)
add_executable(translation_units_and_linkage translation_units_and_linkage.cpp translation_units_and_linkage_test.cpp)
add_executable(arguments_definitions arguments_definitions.cpp)
add_executable(atexit_function atexit_function.cpp)
add_executable(abort_exit_compare abort_exit_compare.cpp)
add_executable(alignment alignment.cpp)
add_executable(lvalue_and_rvalue lvalue_and_rvalue.cpp)